Big slider & Dropdown query

--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -426,30 +426,37 @@ svg.icon {
   text-transform: uppercase;
   font-size: 0.8em; }
 
-.home.slider {
+.big.slider {
   margin-top: -4em; }
-  .home.slider .slide .bg_img {
+  .big.slider .slide .bg_img {
     max-width: 166rem;
     margin: 0 auto; }
-  .home.slider .details.box {
+  .big.slider .details.box {
     bottom: 4em;
     width: 90%; }
-    .home.slider .details.box img {
+    .big.slider .details.box h2 {
+      font-size: 2em; }
+    .big.slider .details.box .subtitle {
+      font-family: Helvetica, Arial, sans-serif; }
+    .big.slider .details.box img {
       display: inline-block; }
     @media screen and (min-width: 30rem) {
-      .home.slider .details.box {
+      .big.slider .details.box {
         width: 60%; } }
   @media screen and (min-width: 50rem) {
-    .home.slider .slide {
+    .big.slider .slide {
       height: 50em; }
-    .home.slider .details.box {
+    .big.slider .details.box {
       width: 45%; } }
   @media screen and (min-width: 79rem) {
-    .home.slider .slide {
+    .big.slider .slide {
       height: 60em; }
-    .home.slider .details.box {
+    .big.slider .details.box {
       width: 35%;
       bottom: 6em; } }
+  @media screen and (max-height: 45rem) {
+    .big.slider .slide {
+      height: 40em; } }
 
 h2.area_title {
   font-size: 1.8em;
@@ -461,8 +468,11 @@ h2.area_title {
   position: relative;
   padding: 0 1em;
   top: -3em; }
+  .dropdown label {
+    line-height: 2em; }
   .dropdown h2 {
-    font-size: 1.2em; }
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; }
   .dropdown .latest.story {
     position: relative;
     z-index: 14; }
@@ -545,14 +555,15 @@ h2.area_title {
     .dropdown .title > div {
       vertical-align: middle;
       display: table-cell;
-      height: 6rem; }
+      height: 6rem;
+      font-size: 1.4em; }
     @media screen and (max-width: 30rem) {
       .dropdown .title {
         width: 80%; } }
   .dropdown.open .latest.story:after {
     transform: rotate(180deg); }
   .dropdown.open ul.stories {
-    top: 6.25em; }
+    top: 6.6em; }
     .dropdown.open ul.stories li {
       width: 100%;
       margin-left: 0; }
