Icon colors, movie hours list style

--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -34,7 +34,8 @@ a
 hr
 	clear: both
 	width: 100%
-	border: .1rem solid $gray
+	border: none
+	border-top: .1rem solid $gray
 	margin: .5em 0 .75em
 
 .max_wrap
@@ -187,7 +188,7 @@ footer
 		fill: $white
 	#foot_nav
 		clear: both
-		border-top: .2rem solid $gray
+		border-top: .1rem solid $gray
 		position: relative
 		padding-top: 1.4em
 		top: 2em
