--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -73,7 +73,8 @@ a {
 hr {
   clear: both;
   width: 100%;
-  border: 0.1rem solid #818181;
+  border: none;
+  border-top: 0.1rem solid #818181;
   margin: 0.5em 0 0.75em; }
 
 .max_wrap {
@@ -203,7 +204,7 @@ footer {
     fill: white; }
   footer #foot_nav {
     clear: both;
-    border-top: 0.2rem solid #818181;
+    border-top: 0.1rem solid #818181;
     position: relative;
     padding-top: 1.4em;
     top: 2em;
@@ -311,6 +312,21 @@ svg.icon {
   fill: #818181;
   width: 2em;
   height: 2em; }
+  svg.icon.facebook {
+    fill: #3b5998; }
+  svg.icon.twitter {
+    fill: #1DA1F2; }
+
+ul.moviehours li {
+  display: inline-block; }
+  ul.moviehours li:before {
+    content: "•";
+    display: inline-block;
+    margin: 0 0.8em;
+    color: #818181; }
+  ul.moviehours li:first-child:before {
+    content: "";
+    margin: 0; }
 
 .slider {
   position: relative;
@@ -375,19 +391,24 @@ svg.icon {
     margin-top: 18em; }
   .card.movie img {
     margin-top: -20em; }
-  .card.schedule .details.box {
-    min-height: inherit; }
-  .card.schedule li {
-    font-family: Helvetica, Arial, sans-serif;
-    display: inline-block;
-    color: #818181; }
-    .card.schedule li:before {
-      content: "•";
-      margin: 0 0.5em;
-      color: #ababab; }
-    .card.schedule li:nth-child(1):before {
+  .card.schedule {
+    font-family: Helvetica, Arial, sans-serif; }
+    .card.schedule .details.box {
+      min-height: inherit; }
+    .card.schedule li {
+      display: inline-block;
+      color: #818181; }
+      .card.schedule li:before {
+        content: "•";
+        margin: 0 0.5em;
+        color: #ababab; }
+      .card.schedule li:nth-child(1):before {
+        content: "";
+        margin: 0; }
+    .card.schedule br {
       content: "";
-      margin: 0; }
+      display: block;
+      margin-bottom: 0.5em; }
   @media screen and (min-width: 50rem) {
     .card.twos {
       width: 50%; }
