--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -56,6 +56,28 @@ svg.icon
 	fill: $gray
 	width: 2em
 	height: 2em
+	&.facebook
+		fill: #3b5998
+	&.twitter
+		fill: #1DA1F2
+
+
+ul.moviehours li
+	display: inline-block
+	&:before
+		content: '•'
+		display: inline-block
+		margin: 0 .8em
+		color: $gray
+	&:first-child:before
+		content: ''
+		margin: 0
+
+
+
+
+
+
 
 
 // Home
@@ -129,10 +151,10 @@ svg.icon
 		img
 			margin-top: -20em
 	&.schedule
+		font-family: $Helvetica
 		.details.box
 			min-height: inherit
 		li
-			font-family: $Helvetica
 			display: inline-block
 			color: $gray
 			&:before
@@ -142,7 +164,10 @@ svg.icon
 			&:nth-child(1):before
 				content: ''
 				margin: 0
-
+		br
+			content: ''
+			display: block
+			margin-bottom: .5em
 	@media screen and (min-width: 50rem)
 		&.twos
 			width: 50%
