--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -229,6 +229,9 @@ h2.area_title
 	.label
 		color: $orange
 		margin-bottom: .5em
+	.subtitle
+		font-family: $Helvetica
+		margin: 0.4em 0 2em
 	.status_label
 		margin-top: 2em
 		&.stick
@@ -244,6 +247,7 @@ h2.area_title
 		color: $gray
 	dd
 		font-family: $Helvetica
+		line-height: 1.4em
 		margin-bottom: 1em
 	a.button
 		border: .1rem solid $white
