--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -201,6 +201,8 @@ h2.area_title
 	height: 40em
 	background-size: cover
 	background-position: center
+	&.no_image
+		height: 14em
 	@media screen and (min-width: 79rem)
 		top: -4em
 
