--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -326,16 +326,29 @@ h2.area_title
 
 .ag_results
 	h3
-		font-size: 1.2em
-		font-weight: bold
+		font-size: 1.4em
+		font-family: $Helvetica
+		font-weight: normal
+		padding-right: 1em
+		padding-left: 1em
 		span
+			font-family: $NewJune
 			color: $orange
+			font-weight: bold
 			margin-right: .5em
+	.kicker
+		font-family: $Helvetica
+		font-size: .9em
+		color: $gray
+		margin-top: 0.2em
+		width: 80%
 	ul
 		border-top: .1rem solid
 		margin: 1em 0 4em
 		li
 			background: $white
+			padding-right: 1em
+			padding-left: 1em
 			&:hover
 				background: $black
 				color: $white
@@ -352,17 +365,31 @@ h2.area_title
 			> div
 				display: table-cell
 				vertical-align: middle
-				padding: 1em 2em 1em 0
+				padding: 1.5em 1em 1.4em 0
 				&.schedule
-					width: 20em
-				&.thumbnail
-					width: 16rem
+					width: 16em
+					font-family: $Helvetica
+					color: $gray
+				&.thumbnail, &.location
+					display: none
 				&.title
-					width: 50%
+					width: 75%
+					padding-left: 1em
+				@media screen and (min-width: 50rem)
+					&.schedule
+						width: 20em
+					&.thumbnail, &.location
+						display: table-cell
+						width: 20em
+					&.title
+						width: 55%
 		img
 			display: block
 			width: 100%
 			height: auto
+		h2, .location
+			font-size: 1.2em
+
 
 
 // Calendar
