--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -174,12 +174,31 @@ h2.area_title
 		color: white
 		margin: 0 1em
 		padding: 1em
-
-	.gallery img
-		max-width: 100%
-
-
-
+		clear: both
+		overflow: auto
+		display: none
+		position: relative
+	.column
+		padding: 4em 1em 2em
+	.info
+		width: 40%
+		float: left
+		.status_label
+			margin-top: 6em
+			font-size: 1em
+			color: $white
+		.subtitle
+			font-family: $Helvetica
+			margin-top: .2em
+		h1
+			font-size: 3em
+			+font-smoothing()
+	.gallery
+		width: 60%
+		float: right
+		img
+			max-width: 100%
+			height: auto
 
 //
 //
