--- a/themes/montana/css/index.css
+++ b/themes/montana/css/index.css
@@ -394,25 +394,42 @@ a.close {
       opacity: 0.3; }
 
 .deck {
-  overflow: auto;
-  padding-top: 2em; }
+  overflow: auto; }
 
 .card {
   position: relative;
-  padding: 1.5rem 1rem 1.5rem 3rem;
+  padding: 1.5rem 1.5rem 1.5rem 3rem;
   float: left; }
+  .card h2 {
+    margin-top: 0.2em;
+    margin-bottom: 2em; }
   .card.twos {
-    width: 100vw; }
+    width: 100vw;
+    max-width: 45em; }
     .card.twos h2 {
       font-size: 2.4em; }
+    .card.twos.no-image .details.box {
+      min-height: 16em; }
   .card.fours {
-    width: 50vw; }
-    .card.fours.has-image .details.box {
-      height: 20em; }
+    width: 50vw;
+    max-width: 22.5em; }
+    .card.fours .details.box {
+      min-height: 18em; }
+  .card.sixs {
+    width: 33.33vw;
+    max-width: 15em; }
+    .card.sixs h2 {
+      font-size: 1em; }
+  @media screen and (max-width: 30rem) {
+    .card.fours, .card.sixs {
+      width: 14em; }
+    .card.fours h2 {
+      font-size: 1em; } }
   .card.movie .details.box {
     margin-top: 18em; }
   .card.movie img {
-    margin-top: -20em; }
+    margin-top: -20em;
+    max-height: 27.5em; }
   .card.schedule {
     font-family: Helvetica, Arial, sans-serif; }
     .card.schedule .details.box {
@@ -431,13 +448,6 @@ a.close {
       content: "";
       display: block;
       margin-bottom: 0.5em; }
-  @media screen and (min-width: 50rem) {
-    .card.twos {
-      width: 50%; }
-    .card.fours {
-      width: 25%; }
-    .card.sixs {
-      width: 16.666%; } }
   .card img {
     width: 100%;
     height: auto;
@@ -448,22 +458,25 @@ a.close {
     width: 100%;
     position: relative;
     margin-left: -1em;
+    margin-top: 2em;
     padding: 0; }
     .card .details.box .wrap {
       padding: 1em; }
     .card .details.box .parent_label {
       top: inherit;
       bottom: -1em; }
-    .card .details.box h2 {
-      margin-bottom: 2em; }
   .card .img_container {
     position: relative;
     right: -1em;
     margin-top: -1em; }
-  .card.no-image .details.box {
-    min-height: 0; }
-  .card.no-image .img_container {
-    margin-top: 0; }
+  .card.no-image {
+    padding-right: 0; }
+    .card.no-image .details.box {
+      min-height: 0; }
+    .card.no-image .img_container {
+      margin-top: 1.5em; }
+      .card.no-image .img_container.sixs .img_container {
+        margin-top: 0; }
 
 .label {
   text-transform: uppercase;
