--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -132,7 +132,9 @@ a.close
 		background: $white
 		border: .1rem solid $black
 		font-size: .8em
-		padding: .25em .5em
+		font-weight: bold
+		+font-smoothing()
+		padding: .4em .5em .2em
 	h2
 		font-size: 1.4em
 		line-height: 1.4em
