--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -94,6 +94,22 @@ a.close
 
 
 
+.embed-container
+	position: relative
+	padding-bottom: 56.25%
+	height: 0
+	overflow: hidden
+	max-width: 100%
+	height: auto
+	iframe, object, embed
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+
+
+
 
 
 
@@ -158,7 +174,10 @@ a.close
 .card
 	position: relative
 	padding: 1.5rem 1.5rem 1.5rem 3rem
-	float: left
+	// float: left
+	display: inline-block !important
+	vertical-align: bottom
+	float: initial
 	h2
 		margin-top: .2em
 		margin-bottom: 2em
@@ -190,7 +209,16 @@ a.close
 		img
 			margin-top: -20em
 			max-height: 27.5em
-
+	&.tv
+		min-height: 10em
+		vertical-align: top
+		h3
+			font-weight: bold
+			margin-top: 1em
+		.about
+			font-family: $Helvetica
+			margin-top: .4em
+			color: $gray
 	&.schedule
 		font-family: $Helvetica
 		.details.box
