--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -23,6 +23,8 @@
 			font-family: $Helvetica
 		img
 			display: inline-block
+		.excerpt
+			margin-bottom: 3em
 		@media screen and (min-width: 30rem)
 			width: 60%
 	@media screen and (min-width: 50rem)
