--- a/themes/montana/sass/local.sass
+++ b/themes/montana/sass/local.sass
@@ -15,41 +15,44 @@
 		max-width: 166rem
 		margin: 0 auto
 	.details.box
-		bottom: 4em
+		bottom: 6em
 		width: 90%
+		padding: 1.4em
 		h2
 			font-size: 2em
-		.subtitle
-			font-family: $Helvetica
+		// .subtitle
+		// 	font-family: $Helvetica
 		img
 			display: inline-block
+		.event_logo
+			max-width: 100%
+			max-height: 10em
 		.excerpt
 			margin-bottom: 3em
+			max-height: 8.25em
+			overflow: hidden
 		@media screen and (min-width: 30rem)
-			width: 60%
-	@media screen and (min-width: 50rem)
-		.slide
-			height: 50em
-		.details.box
-			width: 45%
-	@media screen and (min-width: 79rem)
-		.slide
-			height: 60em
-		.details.box
-			width: 35%
-			bottom: 6em
-	@media screen and (max-height: 45rem)
-		.slide
-			height: 40em
+			width: 75%
+			max-width: 42em
 
 
 
 
 h2.area_title
-	font-size: 1.8em
+	font-size: 2em
 	font-weight: bold
-	text-align: center
-	margin: 1.5em 0 .5em
+	margin: .5em 0 .5em .5em
+	&.boxed
+		display: inline-block
+		position: relative
+		top: -1.2em
+		margin-top: -1em
+		background: $white
+		border: .1rem solid $black
+		padding: .6em .8em .5em
+		color: $black
+		font-weight: initial
+
 
 .dropdown
 	position: relative
@@ -104,14 +107,14 @@ h2.area_title
 		border-bottom: .1rem solid $lightgray
 		display: block
 		padding: 1em
-		@media screen and (max-width: 30rem)
-			display: none
 		img
 			display: inline-block
 			margin-right: 1em
 			vertical-align: top
 			max-height: 6rem
 			width: auto
+			@media screen and (max-width: 30rem)
+				display: none
 	a
 		color: $white
 		display: inline-block
@@ -151,11 +154,14 @@ h2.area_title
 					top: 19.9em
 				&:nth-child(5)
 					top: 26.55em
+				&:nth-child(6)
+					top: 33.2em
 				&:hover
 					background: $white
 					a
 						color: $orange
-
+				@media screen and (max-width: 30rem)
+					opacity: .2
 
 
 .collections
@@ -183,7 +189,6 @@ h2.area_title
 	.column
 		padding: 4em 1em 2em
 	.info
-		width: 40%
 		float: left
 		.status_label
 			margin-top: 6em
@@ -196,11 +201,15 @@ h2.area_title
 			font-size: 3em
 			+font-smoothing()
 	.gallery
-		width: 60%
 		float: right
 		img
 			max-width: 100%
 			height: auto
+	@media screen and (min-width: 30rem)
+		.info
+			width: 40%
+		.gallery
+			width: 60%
 
 //
 //
@@ -219,7 +228,9 @@ h2.area_title
 .bg_featured_banner
 	position: relative
 	width: 100%
-	height: 40em
+	height: 85vh
+	min-height: 40em
+	max-height: 60em
 	background-size: cover
 	background-position: center
 	&.no_image
@@ -429,3 +440,25 @@ h2.area_title
 	width: 15.3em
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus
 	background: transparent
+
+
+
+
+
+
+
+
+
+.area
+	margin-top: 14vh
+	&.for_today
+		margin-top: 20vh
+	&.conarte_tv
+		margin-top: 20vh
+		padding: 2em 0 4em
+		background: $black
+		color: $white
+	&.special h2.area_title
+		margin-bottom: -1em
+		position: relative
+		top: 1em
