--- a/themes/montana/sass/setup.sass
+++ b/themes/montana/sass/setup.sass
@@ -110,7 +110,7 @@ header
 	nav#menu
 		font-size: 1.2em
 		a
-			color: white
+			color: $white
 		ul
 			display: flex
 			justify-content: space-between
@@ -165,7 +165,6 @@ footer
 			font-size: initial
 			border: none
 		form
-			background: yellow
 			display: inline-block
 			border-radius: .4rem
 			overflow: hidden
