--- a/themes/montana/sass/modules.sass
+++ b/themes/montana/sass/modules.sass
@@ -34,6 +34,7 @@ a.button
 	font-family: $Helvetica
 	color: $gray
 	letter-spacing: .02em
+	width: 100%
 
 .clear
 	clear: both
@@ -54,8 +55,8 @@ a.button
 
 svg.icon
 	fill: $gray
-	width: 2em
-	height: 2em
+	width: 1.6em
+	height: 1.6em
 	&.facebook
 		fill: #3b5998
 	&.twitter
@@ -119,16 +120,58 @@ a.close
 	z-index: 0
 	.slide
 		position: relative
-		height: 40em
+		height: 85vh
+		min-height: 40em
+		max-height: 60em
 		> img
 			max-width: 100%
 			min-height: 20em
 		.bg_img
 			width: 100%
-			height: 60em
+			height: 85vh
+			min-height: 40em
 			background-size: cover
 			background-position: center
 			position: relative
+
+
+
+
+.slick-dots
+	position: absolute
+	bottom: 3em
+	margin-left: 2.4em
+	display: block
+	width: 100%
+	max-width: 14em
+	padding: 0
+	li
+		position: relative
+		display: inline-block
+		margin-right: .5em
+		button
+			display: block
+			cursor: pointer
+			color: transparent
+			border: 0
+			outline: none
+			background: transparent
+			&:hover:before,
+			&:focus:before
+				opacity: 1
+			&:before
+				width: 1em
+				height: 1em
+				display: block
+				content: ' '
+				background-color: $white
+				border: .1rem solid $black
+				border-radius: 50%
+		&.slick-active button:before
+			background: $orange
+			border: none
+
+
 
 
 .details.box
@@ -157,6 +200,7 @@ a.close
 	.status_label
 		position: absolute
 		bottom: 1em
+		width: 80%
 		span
 			opacity: .3
 
@@ -192,12 +236,16 @@ a.close
 		width: 50vw
 		max-width: 22.5em
 		.details.box
-			min-height: 18em
+			@media screen and (min-width: 30rem)
+				min-height: 18em
 	&.sixs
 		width: 33.33vw
 		max-width: 15em
 		h2
 			font-size: 1em
+		.status_label p
+			+ellipsis()
+			width: 84%
 	@media screen and (max-width: 30rem)
 		&.fours, &.sixs
 			width: 14em
@@ -209,6 +257,8 @@ a.close
 		img
 			margin-top: -20em
 			max-height: 27.5em
+		@media screen and (max-width: 30rem)
+			width: 20em
 	&.tv
 		min-height: 10em
 		vertical-align: top
